@@ -1,0 +1,10 @@
+@HD	VN:1.4	SO:coordinate
+@SQ	SN:xx	LN:100	M5:bbf4de6d8497a119dda6e074521643dc
+a1	67	xx	1	30	10M	=	5	14	ATCGTACTGT	AAAAAAAAAA
+a1	131	xx	5	30	10M	=	1	14	TACTGTGCGC	AAAAAAAAAA
+a2	65	xx	21	30	10M	=	25	14	ATCGTACTGT	AAAAAAAAAA
+a2	129	xx	25	30	10M	=	21	14	TACTGTGCGC	AAAAAAAAAA
+a3	67	xx	45	30	10M	=	55	20	TACTGTGCGC	AAAAAA!!!!
+a3	131	xx	55	30	10M	=	45	20	ATCGTACTGT	AAAAAAAAAA
+a4	67	xx	71	30	10M	=	75	14	ATCGTACTGT	AAAAAA!!!!
+a4	131	xx	75	30	10M	=	71	14	TACTGTGCGC	AAAAAAAAAA
